# haskell-vscode

./: .gitignore  CHANGELOG.md  README.md  haskell-vscode.cabal
.devcontainer/: Dockerfile  devcontainer.json
