cabal-version:      2.4
name:               haskell-vscode
version:            0.1.0.0
author:             Slava Buzin
maintainer:         v8v.buzin@gmail.com
extra-source-files: CHANGELOG.md

executable haskell-vscode
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
